--- a/cookbook/src/Styles/less/create.less
+++ b/cookbook/src/Styles/less/create.less
@@ -40,18 +40,10 @@
         border-top-right-radius: 35px;
       }
 
-      .image-container {
-        display: flex;
+      .image {
         width: 100%;
-        // max-height: 300px;
-        overflow: hidden;
         border-left: 3px solid @CBred;
         border-right: 3px solid @CBred;
-
-        .image {
-          width: 100%;
-          height: auto;
-        }
       }
 
       .body {
